remove all titles

--- a/0_dev/removed-files/call-for-syllabi.html
+++ b/0_dev/removed-files/call-for-syllabi.html
@@ -65,7 +65,7 @@
 				</style>				 -->
 				
 				<!-- <div class="image-wrapper">
-					<img class="image-border" loading="lazy" src="/img/home/uvc_0005-1640px.jpg" srcset="/img/home/uvc_0005-1640px.jpg 1640w, /img/home/uvc_0005-1244px.jpg 1244w, /img/home/uvc_0005-864px.jpg 864w, /img/home/uvc_0005-622px.jpg 622w, /img/home/uvc_0005-592px.jpg 592w, /img/home/uvc_0005-432px.jpg 432w, /img/home/uvc_0005-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee. “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand). c.1905, https://collections.tepapa.govt.nz/object/417717. Museum of New Zealand | Te Papa Tongarewa, Wellington, New Zealand, Te Papa (GH007416). Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/)."/>
+					<img class="image-border" loading="lazy" src="/img/home/uvc_0005-1640px.jpg" srcset="/img/home/uvc_0005-1640px.jpg 1640w, /img/home/uvc_0005-1244px.jpg 1244w, /img/home/uvc_0005-864px.jpg 864w, /img/home/uvc_0005-622px.jpg 622w, /img/home/uvc_0005-592px.jpg 592w, /img/home/uvc_0005-432px.jpg 432w, /img/home/uvc_0005-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people."/>
 					<div class="image-caption">
 						<p>
 							<a href="#gee">
@@ -88,7 +88,7 @@
 
 				<!-- <section aria-labelledby="call-for-syllabi" id="call">
 					<div class="image-wrapper">
-						<img loading="lazy" src="/img/home/uvc_0006-1170px.jpg" srcset="/img/home/uvc_0006-1170px.jpg 1170w, /img/home/uvc_0006-888px.jpg 888w, /img/home/uvc_0006-585px.jpg 585w, /img/home/uvc_0006-568px.jpg 568w, /img/home/uvc_0006-444px.jpg 444w, /img/home/uvc_0006-284px.jpg 284w" sizes="(min-width: 780px) 585px, (min-width: 740px) 650px, (min-width: 360px) 90.28vw, calc(167.5vw - 265px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous. “Dance Blanket with Diving Whale and Raven Motifs.” c.1880-c.1900, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Art Institute of Chicago, Chicago, 1961.568. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/)."/>
+						<img loading="lazy" src="/img/home/uvc_0006-1170px.jpg" srcset="/img/home/uvc_0006-1170px.jpg 1170w, /img/home/uvc_0006-888px.jpg 888w, /img/home/uvc_0006-585px.jpg 585w, /img/home/uvc_0006-568px.jpg 568w, /img/home/uvc_0006-444px.jpg 444w, /img/home/uvc_0006-284px.jpg 284w" sizes="(min-width: 780px) 585px, (min-width: 740px) 650px, (min-width: 360px) 90.28vw, calc(167.5vw - 265px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe."/>
 						<div class="image-caption">
 							<p>
 								<a href="#dance">
