--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Undisciplining the Dramatic Monologue</h2>
 				<div class="aspect-ratio-box">						
-					<img src="/img/lesson_plans/uvc_0016-1800px.jpg" srcset="/img/lesson_plans/uvc_0016-1800px.jpg 1800w, /img/lesson_plans/uvc_0016-1650px.jpg 1650w, /img/lesson_plans/uvc_0016-1500px.jpg 1500w, /img/lesson_plans/uvc_0016-1350px.jpg 1350w, /img/lesson_plans/uvc_0016-1200px.jpg 1200w, /img/lesson_plans/uvc_0016-1050px.jpg 1050w, /img/lesson_plans/uvc_0016-900px.jpg 900w, /img/lesson_plans/uvc_0016-750px.jpg 750w, /img/lesson_plans/uvc_0016-600px.jpg 600w, /img/lesson_plans/uvc_0016-450px.jpg 450w, /img/lesson_plans/uvc_0016-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Scene of ocean water with clouds and plume of dark smoke rising in background." title="Tanner, Henry Ossawa. Crossing the Atlantic (Return Home). 1894, https://collections.si.edu/search/detail/edanmdm:saam_1983.95.28?q=record_ID%3Dsaam_1983.95.28&record=1&hlterm=record_ID%3Dsaam_1983.95.28&inline=true. The Smithsonian Institution. Used for education consistent with the principles of fair use under Section 108 of the U.S. Copyright Act."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/lesson_plans/uvc_0016-1800px.jpg" srcset="/img/lesson_plans/uvc_0016-1800px.jpg 1800w, /img/lesson_plans/uvc_0016-1650px.jpg 1650w, /img/lesson_plans/uvc_0016-1500px.jpg 1500w, /img/lesson_plans/uvc_0016-1350px.jpg 1350w, /img/lesson_plans/uvc_0016-1200px.jpg 1200w, /img/lesson_plans/uvc_0016-1050px.jpg 1050w, /img/lesson_plans/uvc_0016-900px.jpg 900w, /img/lesson_plans/uvc_0016-750px.jpg 750w, /img/lesson_plans/uvc_0016-600px.jpg 600w, /img/lesson_plans/uvc_0016-450px.jpg 450w, /img/lesson_plans/uvc_0016-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Scene of ocean water with clouds and plume of dark smoke rising in background."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="lesson-plan-specs">
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Cherrie Kwok <a class="mail" href="mailto:mk7kf@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Cherrie Kwok <a class="mail" href="mailto:mk7kf@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Collaborating Peer Reviewers:</strong> Carolyn Betensky, Melissa Free, Ji Eun Lee</p>
 						
-						<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
 
@@ -328,7 +328,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 		
 		<style>.content main aside.bennett-coverley{text-align:center}.content main aside.bennett-coverley div{display:inline-block}</style>
