--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,15 +39,15 @@
 			<main id="main" aria-labelledby="lesson-plan">		
 				<h2 id="lesson-plan">Mary Seacole and the Caribbean</h2>
 				<div class="aspect-ratio-box">
-					<img style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0008-900px.jpg" srcset="/img/lesson_plans/uvc_0008-900px.jpg 900w, /img/lesson_plans/uvc_0008-750px.jpg 750w, /img/lesson_plans/uvc_0008-600px.jpg 600w, /img/lesson_plans/uvc_0008-450px.jpg 450w, /img/lesson_plans/uvc_0008-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Kingston harbor with a few sailboats visible in the background." title="Kingston from Harbor. 1891, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. MonoVisions Black & White Photography Magazine. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0008-900px.jpg" srcset="/img/lesson_plans/uvc_0008-900px.jpg 900w, /img/lesson_plans/uvc_0008-750px.jpg 750w, /img/lesson_plans/uvc_0008-600px.jpg 600w, /img/lesson_plans/uvc_0008-450px.jpg 450w, /img/lesson_plans/uvc_0008-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Kingston harbor with a few sailboats visible in the background."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 				
 				<section class="cluster-details specs" aria-labelledby="details">
 					<h3 id="details">Lesson Plan Cluster Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Lesson Plan Developers:</strong>  Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
 
@@ -110,7 +110,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
