--- a/html/syllabi/victorian_human.html
+++ b/html/syllabi/victorian_human.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -40,19 +40,19 @@
 				<h2 id="syllabus">The Victorian and the Human</h2>
 				<div class="aspect-ratio-box">
 
-					<img style="object-position: 50% 100%;" src="/img/syllabi/uvc_0034-1800px.jpg" srcset="/img/syllabi/uvc_0034-1800px.jpg 1800w, /img/syllabi/uvc_0034-1650px.jpg 1650w, /img/syllabi/uvc_0034-1500px.jpg 1500w, /img/syllabi/uvc_0034-1350px.jpg 1350w, /img/syllabi/uvc_0034-1200px.jpg 1200w, /img/syllabi/uvc_0034-1050px.jpg 1050w, /img/syllabi/uvc_0034-900px.jpg 900w, /img/syllabi/uvc_0034-750px.jpg 750w, /img/syllabi/uvc_0034-600px.jpg 600w, /img/syllabi/uvc_0034-450px.jpg 450w, /img/syllabi/uvc_0034-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A series of upright skeletons (left to right) of a gibbon, orangutan, chimpanzee, gorilla, and man." title="Hawkins, Benjamin Waterhouse. “Skeletons of the Gibbon. Orang. Chimpanzee. Gorilla. Man.” Evidence as to Man’s Place in Nature, by Thomas Henry Huxley, Williams and Norgate, 1863, frontispiece, https://archive.org/details/evidenceastomans63thom. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img style="object-position: 50% 100%;" src="/img/syllabi/uvc_0034-1800px.jpg" srcset="/img/syllabi/uvc_0034-1800px.jpg 1800w, /img/syllabi/uvc_0034-1650px.jpg 1650w, /img/syllabi/uvc_0034-1500px.jpg 1500w, /img/syllabi/uvc_0034-1350px.jpg 1350w, /img/syllabi/uvc_0034-1200px.jpg 1200w, /img/syllabi/uvc_0034-1050px.jpg 1050w, /img/syllabi/uvc_0034-900px.jpg 900w, /img/syllabi/uvc_0034-750px.jpg 750w, /img/syllabi/uvc_0034-600px.jpg 600w, /img/syllabi/uvc_0034-450px.jpg 450w, /img/syllabi/uvc_0034-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A series of upright skeletons (left to right) of a gibbon, orangutan, chimpanzee, gorilla, and man."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="syllabus-specs">
 					<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Ava Bindas <a class="mail" href="mailto:akbindas@ucdavis.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Ava Bindas <a class="mail" href="mailto:akbindas@ucdavis.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Peer Reviewer:</strong> Patricia A. Matthew</p>
 						
-						<p><strong>Syllabus Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:rfong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Syllabus Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:rfong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Centering Black Studies</p>
 
@@ -75,7 +75,7 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Syllabus Overview</h3>
 
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/bindas_victorian_human.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/bindas_victorian_human.docx"  title="This link opens a Word document.">Word</a></p>
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/bindas_victorian_human.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/bindas_victorian_human.docx">Word</a></p>
 
 					<p>“The Victorian and the Human” equips students to answer the questions: What legacies and practices of white supremacy underpin the label “Victorian,” and how might we rethink the nineteenth-century British subject otherwise? Complementing Sukanya Banerjee’s recent interrogation of “who or what constitutes ‘Victorian’ or ‘British’ in the first place,” this course centers critical genealogies from Black Studies, postcolonial theory, and Black feminist thought to productively cast into crisis the construction of the human (925). These theories destabilize the white, able-bodied, sociopolitical citizen subject that liberal humanism engenders as and equates with the “Victorian” in the nineteenth century.</p>
 
@@ -131,7 +131,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
