--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -41,7 +41,7 @@
 				<section id="myCarousel" class="carousel" aria-roledescription="carousel" aria-label="Images from around the Victorian Globe by Non-European Artists">
 					<div class="carousel-inner">
 						<div class="controls">
-							<button class="rotation pause" aria-label="Stop automatic slide show" title="Rotation Pause">
+							<button class="rotation pause" aria-label="Stop automatic slide show">
 								<svg width="42" height="34" version="1.1" xmlns="//www.w3.org/2000/svg">
 									<rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"></rect>
 									<rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"></rect>
@@ -50,14 +50,14 @@
 									<polygon class="play" points="15 8 15 20 27 14"></polygon>
 								</svg>
 							</button>
-							<button class="previous" aria-controls="myCarousel-items" aria-label="Previous Slide" title="Previous Slide">
+							<button class="previous" aria-controls="myCarousel-items" aria-label="Previous Slide">
 								<svg width="42" height="34" version="1.1" xmlns="//www.w3.org/2000/svg">
 									<rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"></rect>
 									<rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"></rect>
 									<polygon points="9 14 21 8 21 11 33 11 33 17 21 17 21 20"></polygon>
 								</svg>
 							</button>
-							<button class="next" aria-controls="myCarousel-items" aria-label="Next Slide" title="Next Slide">
+							<button class="next" aria-controls="myCarousel-items" aria-label="Next Slide">
 								<svg width="42" height="34" version="1.1" xmlns="//www.w3.org/2000/svg">
 									<rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"></rect>
 									<rect class="border" x="4" y="4" rx="5" ry="5" width="34" height="20"></rect>
@@ -169,10 +169,10 @@
 					<h2 id="main-sections">Main Sections</h2>
 
 					<ul>
-						<li id="site-section-1"><a href="/html/zoomcasts.html"><span><i class="fa fa-play-circle fa-fw" title="Zoomcasts"></i> Zoomcasts</span></a></li>
-						<li id="site-section-2"><a href="/html/lesson_plans.html"><span><i class="fa fa-book fa-fw" title="Lesson Plans"></i> Lesson Plans</span></a></li>
-						<li id="site-section-3"><a href="/html/syllabi.html"><span><i class="fa fa-pen fa-fw" title="Syllabi"></i> Syllabi</span></a></li>
-						<li id="site-section-4"><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw" title="About"></i> About</span></a></li>
+						<li id="site-section-1"><a href="/html/zoomcasts.html"><span><i class="fa fa-play-circle fa-fw"></i> Zoomcasts</span></a></li>
+						<li id="site-section-2"><a href="/html/lesson_plans.html"><span><i class="fa fa-book fa-fw"></i> Lesson Plans</span></a></li>
+						<li id="site-section-3"><a href="/html/syllabi.html"><span><i class="fa fa-pen fa-fw"></i> Syllabi</span></a></li>
+						<li id="site-section-4"><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw"></i> About</span></a></li>
 					</ul>
 				</section>
 
@@ -189,7 +189,7 @@
 				<aside class="participate">
 					<p>Follow us, join our mailing list, or contribute to the project.</p>
 					<div>
-						<a class="follow" href="https://twitter.com/intent/user?screen_name=UndiscVC"><i class="fab fa-twitter fa-fw" aria-hidden="true" title="Twitter"></i> Follow Us!</a>
+						<a class="follow" href="https://twitter.com/intent/user?screen_name=UndiscVC"><i class="fab fa-twitter fa-fw" aria-hidden="true"></i> Follow Us!</a>
 
 						<a class="contribute" href="https://docs.google.com/forms/d/1QLFgCD9dUenIr4VcOXE-Yg8PlM20d277wfCHojRzYuQ/edit">Mailing List / Get Involved</a>
 					</div>
@@ -238,7 +238,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="/js/carousel.js?=newVers_0002"></script>
