--- a/0_dev/assessments.html
+++ b/0_dev/assessments.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -47,14 +47,14 @@
 
 				<section aria-labelledby="">
 					<h2 id=""></h2><!-- Update. We need a title here.-->
-					<div><a href="/html/assessments/XXX.html"><img loading="lazy" src="/img/assessments/tiles/uvc_YYYY-1324px.jpg" srcset="/img/assessments/tiles/uvc_YYYY-1324px.jpg 1324w, /img/assessments/tiles/uvc_YYYY-1136px.jpg 1136w, /img/assessments/tiles/uvc_YYYY-930px.jpg 930w, /img/assessments/tiles/uvc_YYYY-814px.jpg 814w, /img/assessments/tiles/uvc_YYYY-662px.jpg 662w, /img/assessments/tiles/uvc_YYYY-568px.jpg 568w, /img/assessments/tiles/uvc_YYYY-530px.jpg 530w, /img/assessments/tiles/uvc_YYYY-465px.jpg 465w, /img/assessments/tiles/uvc_YYYY-407px.jpg 407w, /img/assessments/tiles/uvc_YYYY-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span><!-- title of assessment -->></span></a></div>
+					<div><a href="/html/assessments/XXX.html"><img loading="lazy" src="/img/assessments/tiles/uvc_YYYY-1324px.jpg" srcset="/img/assessments/tiles/uvc_YYYY-1324px.jpg 1324w, /img/assessments/tiles/uvc_YYYY-1136px.jpg 1136w, /img/assessments/tiles/uvc_YYYY-930px.jpg 930w, /img/assessments/tiles/uvc_YYYY-814px.jpg 814w, /img/assessments/tiles/uvc_YYYY-662px.jpg 662w, /img/assessments/tiles/uvc_YYYY-568px.jpg 568w, /img/assessments/tiles/uvc_YYYY-530px.jpg 530w, /img/assessments/tiles/uvc_YYYY-465px.jpg 465w, /img/assessments/tiles/uvc_YYYY-407px.jpg 407w, /img/assessments/tiles/uvc_YYYY-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt=""/><span><!-- title of assessment -->></span></a></div>
 				</section>
 			</main>
 			
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
