--- a/0_dev/templates+workflows/template_syllabus.html
+++ b/0_dev/templates+workflows/template_syllabus.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus"></h2><!-- Change -->
 				<div class="aspect-ratio-box">
-					<img src="/img/syllabi/uvc_000X-1800px.jpg" srcset="/img/syllabi/uvc_000X-1800px.jpg 1800w, /img/syllabi/uvc_000X-1650px.jpg 1650w, /img/syllabi/uvc_000X-1500px.jpg 1500w, /img/syllabi/uvc_000X-1350px.jpg 1350w, /img/syllabi/uvc_000X-1200px.jpg 1200w, /img/syllabi/uvc_000X-1050px.jpg 1050w, /img/syllabi/uvc_000X-900px.jpg 900w, /img/syllabi/uvc_000X-750px.jpg 750w, /img/syllabi/uvc_000X-600px.jpg 600w, /img/syllabi/uvc_000X-450px.jpg 450w, /img/syllabi/uvc_000X-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/><!-- Change -->
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/syllabi/uvc_000X-1800px.jpg" srcset="/img/syllabi/uvc_000X-1800px.jpg 1800w, /img/syllabi/uvc_000X-1650px.jpg 1650w, /img/syllabi/uvc_000X-1500px.jpg 1500w, /img/syllabi/uvc_000X-1350px.jpg 1350w, /img/syllabi/uvc_000X-1200px.jpg 1200w, /img/syllabi/uvc_000X-1050px.jpg 1050w, /img/syllabi/uvc_000X-900px.jpg 900w, /img/syllabi/uvc_000X-750px.jpg 750w, /img/syllabi/uvc_000X-600px.jpg 600w, /img/syllabi/uvc_000X-450px.jpg 450w, /img/syllabi/uvc_000X-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt=""/><!-- Change -->
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="syllabus-specs">
 					<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong>  <a class="mail" href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p><!-- Change -->
+						<p><strong>Developer:</strong>  <a class="mail" href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 
 						<p><strong>Peer Reviewer:</strong> </p><!-- Change -->
 						
-						<p><strong>Syllabus Cluster Developer:</strong> <a class="mail" href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p><!-- Change -->
+						<p><strong>Syllabus Cluster Developer:</strong> <a class="mail" href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 
 						<p><strong>Cluster Title:</strong> </p><!-- Change -->
 
@@ -75,7 +75,7 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Syllabus Overview</h3>
 
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/.docx"  title="This link opens a Word document.">Word</a></p><!-- Change -->
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/.docx">Word</a></p><!-- Change -->
 				
 				</section>
 
@@ -108,7 +108,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
