--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,8 +39,8 @@
 			<main id="main" aria-labelledby="values">
 				<h2 id="values">Bibliography</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/about/uvc_0022-1050px.jpg" srcset="/img/about/uvc_0022-1050px.jpg 1050w, /img/about/uvc_0022-900px.jpg 900w, /img/about/uvc_0022-750px.jpg 750w, /img/about/uvc_0022-600px.jpg 600w, /img/about/uvc_0022-450px.jpg 450w, /img/about/uvc_0022-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate, multi-layer, diamond pattern with multiple embedded shapes of black, beige, red, blue." title="Jones, Owen. “Byzantine No. 3.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XXX, https://archive.org/details/grammarornament00Jone. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/about/uvc_0022-1050px.jpg" srcset="/img/about/uvc_0022-1050px.jpg 1050w, /img/about/uvc_0022-900px.jpg 900w, /img/about/uvc_0022-750px.jpg 750w, /img/about/uvc_0022-600px.jpg 600w, /img/about/uvc_0022-450px.jpg 450w, /img/about/uvc_0022-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate, multi-layer, diamond pattern with multiple embedded shapes of black, beige, red, blue."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section aria-labelledby="note">
@@ -699,7 +699,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
