--- a/html/about/call_for_assessments_2022.html
+++ b/html/about/call_for_assessments_2022.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,8 +39,8 @@
 			<main id="main" aria-labelledby="assessments">
 				<h2 id="assessments">Call for Assessments (2022)</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/about/uvc_0039-1800px.jpg" srcset="/img/about/uvc_0039-1800px.jpg 1800w, /img/about/uvc_0039-1650px.jpg 1650w, /img/about/uvc_0039-1500px.jpg 1500w, /img/about/uvc_0039-1350px.jpg 1350w, /img/about/uvc_0039-1200px.jpg 1200w, /img/about/uvc_0039-1050px.jpg 1050w, /img/about/uvc_0039-900px.jpg 900w, /img/about/uvc_0039-750px.jpg 750w, /img/about/uvc_0039-600px.jpg 600w, /img/about/uvc_0039-450px.jpg 450w, /img/about/uvc_0039-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel." title="Anonymous Navajo (Diné) Artist. Blanket or Rug. [1801-1900], https://www.artic.edu/artworks/153683/blanket-or-rug. Art Institute of Chicago, Chicago, 1999.579. Gift of Joseph W. Fell. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/about/uvc_0039-1800px.jpg" srcset="/img/about/uvc_0039-1800px.jpg 1800w, /img/about/uvc_0039-1650px.jpg 1650w, /img/about/uvc_0039-1500px.jpg 1500w, /img/about/uvc_0039-1350px.jpg 1350w, /img/about/uvc_0039-1200px.jpg 1200w, /img/about/uvc_0039-1050px.jpg 1050w, /img/about/uvc_0039-900px.jpg 900w, /img/about/uvc_0039-750px.jpg 750w, /img/about/uvc_0039-600px.jpg 600w, /img/about/uvc_0039-450px.jpg 450w, /img/about/uvc_0039-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section aria-labelledby="overview">
@@ -82,7 +82,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
