--- a/html/about/call_for_syllabi_and_syllabus_clusters.html
+++ b/html/about/call_for_syllabi_and_syllabus_clusters.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,8 +39,8 @@
 			<main id="main" aria-labelledby="syllabus-clusters">
 				<h2 id="syllabus-clusters">Call for Syllabi and Syllabus Clusters (Open)</h2>
 				<div class="aspect-ratio-box">					
-					<img src="/img/about/uvc_0040-1800px.jpg" srcset="/img/about/uvc_0040-1800px.jpg 1800w, /img/about/uvc_0040-1650px.jpg 1650w, /img/about/uvc_0040-1500px.jpg 1500w, /img/about/uvc_0040-1350px.jpg 1350w, /img/about/uvc_0040-1200px.jpg 1200w, /img/about/uvc_0040-1050px.jpg 1050w, /img/about/uvc_0040-900px.jpg 900w, /img/about/uvc_0040-750px.jpg 750w, /img/about/uvc_0040-600px.jpg 600w, /img/about/uvc_0040-450px.jpg 450w, /img/about/uvc_0040-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, single interlocking tapestry weave; two selvages present." title="Anonymous Navajo (Diné) Artist. Moqui-Style Sarape. [c.1870], https://www.artic.edu/artworks/148331/moqui-style-sarape. Art Institute of Chicago, Chicago, 1997.458. Through prior acquisitions of Louis A. Allen, Mr. and Mrs. James W. Alsdorf, The Alsdorf Foundation, Joseph P. Antonow, Edward E. Ayer in memory of Charles L. Hutchinson, Herbert Baker, Mr. and Mrs. Dave Chapman, Sylvia Coppersmith in memory of Leila Rosen, Mrs. Eugene A. Davidson, Domenic DiPiero, Maurice D. Galleher Endowment, Mr. and Mrs. Edwin E. Hokin, Mrs. Maurice H. Mandelbaum as a gift of her family, Mr. and Mrs. Everett McNear; Mr. and Mrs. Michael Newbury, Dr. H. Van de Waal, Mr. and Mrs. Raymond Wielgus and Suzette Morton Zurcher. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/about/uvc_0040-1800px.jpg" srcset="/img/about/uvc_0040-1800px.jpg 1800w, /img/about/uvc_0040-1650px.jpg 1650w, /img/about/uvc_0040-1500px.jpg 1500w, /img/about/uvc_0040-1350px.jpg 1350w, /img/about/uvc_0040-1200px.jpg 1200w, /img/about/uvc_0040-1050px.jpg 1050w, /img/about/uvc_0040-900px.jpg 900w, /img/about/uvc_0040-750px.jpg 750w, /img/about/uvc_0040-600px.jpg 600w, /img/about/uvc_0040-450px.jpg 450w, /img/about/uvc_0040-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section aria-labelledby="overview">
@@ -83,7 +83,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
