--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,8 +39,8 @@
 			<main id="main" aria-labelledby="values">
 				<h2 id="values">Values and Practices</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/about/uvc_0024-1350px.jpg" srcset="/img/about/uvc_0024-1350px.jpg 1350w, /img/about/uvc_0024-1200px.jpg 1200w, /img/about/uvc_0024-1050px.jpg 1050w, /img/about/uvc_0024-900px.jpg 900w, /img/about/uvc_0024-750px.jpg 750w, /img/about/uvc_0024-600px.jpg 600w, /img/about/uvc_0024-450px.jpg 450w, /img/about/uvc_0024-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw"  alt="Complex flower array with red, pink, white, yellow, blue, and purple flowers." title="Jones, Owen. “Indian No. 6.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate LIV, https://archive.org/details/grammarornament00Jone. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/about/uvc_0024-1350px.jpg" srcset="/img/about/uvc_0024-1350px.jpg 1350w, /img/about/uvc_0024-1200px.jpg 1200w, /img/about/uvc_0024-1050px.jpg 1050w, /img/about/uvc_0024-900px.jpg 900w, /img/about/uvc_0024-750px.jpg 750w, /img/about/uvc_0024-600px.jpg 600w, /img/about/uvc_0024-450px.jpg 450w, /img/about/uvc_0024-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw"  alt="Complex flower array with red, pink, white, yellow, blue, and purple flowers."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section aria-labelledby="overview">
@@ -109,8 +109,8 @@
 					<h3 id="terminology">Terminology</h3>
 
 					<p><em>Undisciplining the Victorian Classroom</em> makes every effort to use terms and typographic practices that align with the principles of antiracism. We also understand that these practices are under active debate and undergo shifts for important reasons. With that in mind, we are committed to following the guidance and expertise of BIPOC scholars and activists, as a form of citational and scholarly solidarity. We also recognize that when talking about nineteenth century contexts, terminologies can be complex and different from the ways that they are used in present discourses. We strive to always be sensitive to those histories, while also simultaneously understanding the urgency of responding to the circumstances of our present moment. As always, we are dedicated to learning, improving, and revising our practices as it becomes necessary.</p>
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Read about our capitalization of the term “Black”: &nbsp;<a href="/pdf/terminology/capitalizing_Black.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/terminology/capitalizing_Black.docx"  title="This link opens a Word document.">Word</a></p>
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Read notes on our “House Style for Site Text and Zotero Entries”: &nbsp;<a href="/pdf/guidelines/uvc_house_style.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/guidelines/uvc_house_style.docx"  title="This link opens a Word document.">Word</a></p>
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Read about our capitalization of the term “Black”: &nbsp;<a href="/pdf/terminology/capitalizing_Black.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/terminology/capitalizing_Black.docx">Word</a></p>
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Read notes on our “House Style for Site Text and Zotero Entries”: &nbsp;<a href="/pdf/guidelines/uvc_house_style.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/guidelines/uvc_house_style.docx">Word</a></p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
@@ -128,7 +128,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
