--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -47,7 +47,7 @@
 
 				<section aria-labelledby="east-asia-1">
 					<h3 id="east-asia-1">Transimperial Networks and East Asia #1</h3>
-					<div><a href="/html/lesson_plans/east_asia_transimperial_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0051-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0051-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0051-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0051-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0051-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0051-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0051-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0051-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0051-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="World map showing a large inner continent, China, surrounded the rest of the world as outer islands." title="Anonymous. “Korean Cheonhado Map.” Seventeenth-eighteeenth century, https://www.bc.edu/content/bc-web/centers/Ricci-Institute/online-exhibits/archives/korean-cheonhado-map.html. Ricci Institute for Chinese-Western Cultural History, Boston College. Courtesy of the Ricci Institute for Chinese-Western Cultural History, Boston College."/><span>Cluster Introduction</span></a></div>
+					<div><a href="/html/lesson_plans/east_asia_transimperial_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0051-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0051-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0051-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0051-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0051-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0051-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0051-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0051-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0051-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="World map showing a large inner continent, China, surrounded the rest of the world as outer islands."/><span>Cluster Introduction</span></a></div>
 				</section>
 
 				<section aria-labelledby="east-asia-2">
@@ -65,7 +65,7 @@
 
 				<section aria-labelledby="seacole-1">
 					<h3 id="seacole-1">Mary Seacole and the Caribbean #1</h3>
-					<div><a href="/html/lesson_plans/seacole_caribbean_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0008-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0008-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0008-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0008-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0008-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0008-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0008-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0008-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0008-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Kingston harbor with a few sailboats visible in the background." title="Kingston from Harbor. 1891, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. MonoVisions Black & White Photography Magazine. Public domain."/><span>Cluster Introduction</span></a></div>
+					<div><a href="/html/lesson_plans/seacole_caribbean_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0008-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0008-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0008-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0008-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0008-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0008-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0008-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0008-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0008-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Kingston harbor with a few sailboats visible in the background."/><span>Cluster Introduction</span></a></div>
 				</section>
 
 				<section aria-labelledby="seacole-2">
@@ -81,7 +81,7 @@
 
 				<section aria-labelledby="africa-1">
 					<h3 id="africa-1">Africa, Diaspora, and the British Empire #1</h3>
-					<div><a href="/html/lesson_plans/africa_diaspora_empire_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0007-1324px.jpg" srcset="/img/lesson_plans/tiles/uvc_0007-1324px.jpg 1324w, /img/lesson_plans/tiles/uvc_0007-1136px.jpg 1136w, /img/lesson_plans/tiles/uvc_0007-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0007-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0007-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0007-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0007-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0007-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0007-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0007-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="White cloth wrapper with brownish black stamped patterns in thirty-five rectangular panels." title="Anonymous Asante Artist. Wrapper. Mid-late nineteenth century, https://africa.si.edu/collections/objects/8582/wrapper?ctx=65a356ddbacf3a7d0a21a8f266e1d934898d46eb&idx=0. Textile and Fiber Arts, Smithsonian National Musem of African Art, 83-3-8. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act."/><span>Cluster Introduction</span></a></div>
+					<div><a href="/html/lesson_plans/africa_diaspora_empire_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0007-1324px.jpg" srcset="/img/lesson_plans/tiles/uvc_0007-1324px.jpg 1324w, /img/lesson_plans/tiles/uvc_0007-1136px.jpg 1136w, /img/lesson_plans/tiles/uvc_0007-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0007-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0007-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0007-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0007-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0007-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0007-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0007-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="White cloth wrapper with brownish black stamped patterns in thirty-five rectangular panels."/><span>Cluster Introduction</span></a></div>
 				</section>
 
 				<section aria-labelledby="africa-2">
@@ -102,7 +102,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
