--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Archival Erasure and the Aftermath of Slavery</h2>
 				<div class="aspect-ratio-box">
-					<img style="object-position: 50% 70%;" src="/img/lesson_plans/uvc_0015-1500px.jpg" srcset="/img/lesson_plans/uvc_0015-1500px.jpg 1500w, /img/lesson_plans/uvc_0015-1350px.jpg 1350w, /img/lesson_plans/uvc_0015-1200px.jpg 1200w, /img/lesson_plans/uvc_0015-1050px.jpg 1050w, /img/lesson_plans/uvc_0015-900px.jpg 900w, /img/lesson_plans/uvc_0015-750px.jpg 750w, /img/lesson_plans/uvc_0015-600px.jpg 600w, /img/lesson_plans/uvc_0015-450px.jpg 450w, /img/lesson_plans/uvc_0015-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Scene of storm at sea with ship in background and various individuals and items in the water." title="Turner, Joseph Mallord William. Slave Ship (Slavers Throwing Overboard the Dead and Dying, Typhoon Coming On). 1840, https://collections.mfa.org/objects/31102. The Beal Gallery (Gallery 251), 99.22. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img style="object-position: 50% 70%;" src="/img/lesson_plans/uvc_0015-1500px.jpg" srcset="/img/lesson_plans/uvc_0015-1500px.jpg 1500w, /img/lesson_plans/uvc_0015-1350px.jpg 1350w, /img/lesson_plans/uvc_0015-1200px.jpg 1200w, /img/lesson_plans/uvc_0015-1050px.jpg 1050w, /img/lesson_plans/uvc_0015-900px.jpg 900w, /img/lesson_plans/uvc_0015-750px.jpg 750w, /img/lesson_plans/uvc_0015-600px.jpg 600w, /img/lesson_plans/uvc_0015-450px.jpg 450w, /img/lesson_plans/uvc_0015-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Scene of storm at sea with ship in background and various individuals and items in the water."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="lesson-plan-specs">
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Collaborating Peer Reviewers:</strong> Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee</p>
 						
-						<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
 
@@ -193,7 +193,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<style>
