--- a/html/lesson_plans/africa_colonial_landscapes.html
+++ b/html/lesson_plans/africa_colonial_landscapes.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Colonial Landscapes and Travel Narratives</h2>
 				<div class="aspect-ratio-box">						
-					<img src="/img/lesson_plans/uvc_0018-1800px.jpg" srcset="/img/lesson_plans/uvc_0018-1800px.jpg 1800w, /img/lesson_plans/uvc_0018-1650px.jpg 1650w, /img/lesson_plans/uvc_0018-1500px.jpg 1500w, /img/lesson_plans/uvc_0018-1350px.jpg 1350w, /img/lesson_plans/uvc_0018-1200px.jpg 1200w, /img/lesson_plans/uvc_0018-1050px.jpg 1050w, /img/lesson_plans/uvc_0018-900px.jpg 900w, /img/lesson_plans/uvc_0018-750px.jpg 750w, /img/lesson_plans/uvc_0018-600px.jpg 600w, /img/lesson_plans/uvc_0018-450px.jpg 450w, /img/lesson_plans/uvc_0018-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Landscape with trees and Zambesi River gorge; water clouds rising from Victoria Falls in background." title="“Bird’s-Eye View of the Great Cataracts of the Zambesi (Called Mosioatunya, or Victoria Falls) and of the Zigzag Chasm below the Falls through Which the River Escapes.” Narrative of an Expedition to the Zambesi and Its Tributaries and of the Discovery of the Lakes Shirwa and Nyassa, 1858-1864, by David Livingstone and Charles Livingstone, John Murray, 1865, frontispiece, https://archive.org/details/b21356853/page/n5/mode/2up. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/lesson_plans/uvc_0018-1800px.jpg" srcset="/img/lesson_plans/uvc_0018-1800px.jpg 1800w, /img/lesson_plans/uvc_0018-1650px.jpg 1650w, /img/lesson_plans/uvc_0018-1500px.jpg 1500w, /img/lesson_plans/uvc_0018-1350px.jpg 1350w, /img/lesson_plans/uvc_0018-1200px.jpg 1200w, /img/lesson_plans/uvc_0018-1050px.jpg 1050w, /img/lesson_plans/uvc_0018-900px.jpg 900w, /img/lesson_plans/uvc_0018-750px.jpg 750w, /img/lesson_plans/uvc_0018-600px.jpg 600w, /img/lesson_plans/uvc_0018-450px.jpg 450w, /img/lesson_plans/uvc_0018-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Landscape with trees and Zambesi River gorge; water clouds rising from Victoria Falls in background."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="lesson-plan-specs">
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Ji Eun Lee <a class="mail" href="mailto:jieunclee@skku.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Ji Eun Lee <a class="mail" href="mailto:jieunclee@skku.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Collaborating Peer Reviewers:</strong> Carolyn Betensky, Melissa Free, Cherrie Kwok</p>
 						
-						<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
 
@@ -226,7 +226,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
