--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Ethiopianism</h2>
 				<div class="aspect-ratio-box">
-					<img style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0017-900px.jpg" srcset="/img/lesson_plans/uvc_0017-900px.jpg 900w, /img/lesson_plans/uvc_0017-750px.jpg 750w, /img/lesson_plans/uvc_0017-600px.jpg 600w, /img/lesson_plans/uvc_0017-450px.jpg 450w, /img/lesson_plans/uvc_0017-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Boy and man with arm raised standing in water surrounded by crowd of onlookers, some with umbrellas." title="Baptism by John Chilembwe in Liberia or Malawi. c.1900-15, https://www.loc.gov/pictures/item/93505644/. Library of Congress Prints and Photographs Division, LOT 12573 [item] [P&P]. No known restrictions on publication."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0017-900px.jpg" srcset="/img/lesson_plans/uvc_0017-900px.jpg 900w, /img/lesson_plans/uvc_0017-750px.jpg 750w, /img/lesson_plans/uvc_0017-600px.jpg 600w, /img/lesson_plans/uvc_0017-450px.jpg 450w, /img/lesson_plans/uvc_0017-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Boy and man with arm raised standing in water surrounded by crowd of onlookers, some with umbrellas."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="lesson-plan-specs">
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Melissa Free <a class="mail" href="mailto:mmfree@asu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Melissa Free <a class="mail" href="mailto:mmfree@asu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Collaborating Peer Reviewers:</strong> Carolyn Betensky, Cherrie Kwok, Ji Eun Lee</p>
 						
-						<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
 
@@ -153,7 +153,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
