--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -30,7 +30,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -40,8 +40,8 @@
 			<main id="main" aria-labelledby="lesson-plan">
         <h2 id="lesson-plan">Transimperial Networks and East Asia: Timeline</h2>
         <div class="aspect-ratio-box">
-          <img src="/img/lesson_plans/uvc_0052-1800px.jpg" srcset="/img/lesson_plans/uvc_0052-1800px.jpg 1800w, /img/lesson_plans/uvc_0052-1650px.jpg 1650w, /img/lesson_plans/uvc_0052-1500px.jpg 1500w, /img/lesson_plans/uvc_0052-1350px.jpg 1350w, /img/lesson_plans/uvc_0052-1200px.jpg 1200w, /img/lesson_plans/uvc_0052-1050px.jpg 1050w, /img/lesson_plans/uvc_0052-900px.jpg 900w, /img/lesson_plans/uvc_0052-750px.jpg 750w, /img/lesson_plans/uvc_0052-600px.jpg 600w, /img/lesson_plans/uvc_0052-450px.jpg 450w, /img/lesson_plans/uvc_0052-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Korean world map centered on China and Korea showing rivers in blue and settlements with red markers." title="Kim Sahyung, et al. Kangnido. 1402, https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg. Wikimedia Commons, Dschingis Khan und seine Erben (exhibition catalogue), München 2005, p. 336–37. Public domain."/>
-          <a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+          <img src="/img/lesson_plans/uvc_0052-1800px.jpg" srcset="/img/lesson_plans/uvc_0052-1800px.jpg 1800w, /img/lesson_plans/uvc_0052-1650px.jpg 1650w, /img/lesson_plans/uvc_0052-1500px.jpg 1500w, /img/lesson_plans/uvc_0052-1350px.jpg 1350w, /img/lesson_plans/uvc_0052-1200px.jpg 1200w, /img/lesson_plans/uvc_0052-1050px.jpg 1050w, /img/lesson_plans/uvc_0052-900px.jpg 900w, /img/lesson_plans/uvc_0052-750px.jpg 750w, /img/lesson_plans/uvc_0052-600px.jpg 600w, /img/lesson_plans/uvc_0052-450px.jpg 450w, /img/lesson_plans/uvc_0052-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Korean world map centered on China and Korea showing rivers in blue and settlements with red markers."/>
+          <a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
         </div>
 
         <section class="cluster-details specs" aria-labelledby="details">
@@ -50,7 +50,7 @@
           <div class="specs-container">
             <p><strong>Timeline Creators:</strong>  Menglu Gao, Sophia Hsu, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Adrian S. Wisnicki (tech. dev.), Rae X. Yan</p>
 
-            <p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+            <p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
             <p><strong>Lesson Plan Cluster Title:</strong> Transimperial Networks and East Asia</p>
 
@@ -482,7 +482,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
