--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,15 +39,15 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Transimperial Networks and East Asia</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/lesson_plans/uvc_0051-1800px.jpg" srcset="/img/lesson_plans/uvc_0051-1800px.jpg 1800w, /img/lesson_plans/uvc_0051-1650px.jpg 1650w, /img/lesson_plans/uvc_0051-1500px.jpg 1500w, /img/lesson_plans/uvc_0051-1350px.jpg 1350w, /img/lesson_plans/uvc_0051-1200px.jpg 1200w, /img/lesson_plans/uvc_0051-1050px.jpg 1050w, /img/lesson_plans/uvc_0051-900px.jpg 900w, /img/lesson_plans/uvc_0051-750px.jpg 750w, /img/lesson_plans/uvc_0051-600px.jpg 600w, /img/lesson_plans/uvc_0051-450px.jpg 450w, /img/lesson_plans/uvc_0051-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="World map showing a large inner continent, China, surrounded the rest of the world as outer islands." title="Anonymous. “Korean Cheonhado Map.” Seventeenth-eighteeenth century, https://www.bc.edu/content/bc-web/centers/Ricci-Institute/online-exhibits/archives/korean-cheonhado-map.html. Ricci Institute for Chinese-Western Cultural History, Boston College. Courtesy of the Ricci Institute for Chinese-Western Cultural History, Boston College."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/lesson_plans/uvc_0051-1800px.jpg" srcset="/img/lesson_plans/uvc_0051-1800px.jpg 1800w, /img/lesson_plans/uvc_0051-1650px.jpg 1650w, /img/lesson_plans/uvc_0051-1500px.jpg 1500w, /img/lesson_plans/uvc_0051-1350px.jpg 1350w, /img/lesson_plans/uvc_0051-1200px.jpg 1200w, /img/lesson_plans/uvc_0051-1050px.jpg 1050w, /img/lesson_plans/uvc_0051-900px.jpg 900w, /img/lesson_plans/uvc_0051-750px.jpg 750w, /img/lesson_plans/uvc_0051-600px.jpg 600w, /img/lesson_plans/uvc_0051-450px.jpg 450w, /img/lesson_plans/uvc_0051-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="World map showing a large inner continent, China, surrounded the rest of the world as outer islands."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 				
 				<section class="cluster-details specs" aria-labelledby="details">
 					<h3 id="details">Lesson Plan Cluster Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Lesson Plan Developers:</strong>  Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan</p>
 
@@ -129,7 +129,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
