--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Victorian Realism, China, and the Politics of Form</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/lesson_plans/uvc_0047-1800px.jpg" srcset="/img/lesson_plans/uvc_0047-1800px.jpg 1800w, /img/lesson_plans/uvc_0047-1650px.jpg 1650w, /img/lesson_plans/uvc_0047-1500px.jpg 1500w, /img/lesson_plans/uvc_0047-1350px.jpg 1350w, /img/lesson_plans/uvc_0047-1200px.jpg 1200w, /img/lesson_plans/uvc_0047-1050px.jpg 1050w, /img/lesson_plans/uvc_0047-900px.jpg 900w, /img/lesson_plans/uvc_0047-750px.jpg 750w, /img/lesson_plans/uvc_0047-600px.jpg 600w, /img/lesson_plans/uvc_0047-450px.jpg 450w, /img/lesson_plans/uvc_0047-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Waterfront area with trees in foreground, buildings at left, and water with houseboats at right." title="Lai Fong. ”Part of the Bund, Shanghai.“ 1870s, http://hdl.handle.net/10020/2003r22b7. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “Reproductions and Permissions” (https://www.getty.edu/research/library/using/reproductions_permissions/index.html)."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/lesson_plans/uvc_0047-1800px.jpg" srcset="/img/lesson_plans/uvc_0047-1800px.jpg 1800w, /img/lesson_plans/uvc_0047-1650px.jpg 1650w, /img/lesson_plans/uvc_0047-1500px.jpg 1500w, /img/lesson_plans/uvc_0047-1350px.jpg 1350w, /img/lesson_plans/uvc_0047-1200px.jpg 1200w, /img/lesson_plans/uvc_0047-1050px.jpg 1050w, /img/lesson_plans/uvc_0047-900px.jpg 900w, /img/lesson_plans/uvc_0047-750px.jpg 750w, /img/lesson_plans/uvc_0047-600px.jpg 600w, /img/lesson_plans/uvc_0047-450px.jpg 450w, /img/lesson_plans/uvc_0047-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Waterfront area with trees in foreground, buildings at left, and water with houseboats at right."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="lesson-plan-specs">
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Rae X. Yan <a class="mail" href="mailto:raeyan@ufl.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Rae X. Yan <a class="mail" href="mailto:raeyan@ufl.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Collaborating Peer Reviewers:</strong> Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez</p>
 						
-						<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Transimperial Networks and East Asia</p>
 
@@ -368,7 +368,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
