--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Decentering Britishness</h2>
 				<div class="aspect-ratio-box">
-					<img style="object-position: 50% 65%;" src="/img/lesson_plans/uvc_0013-900px.jpg" srcset="/img/lesson_plans/uvc_0013-900px.jpg 900w, /img/lesson_plans/uvc_0013-750px.jpg 750w, /img/lesson_plans/uvc_0013-600px.jpg 600w, /img/lesson_plans/uvc_0013-450px.jpg 450w, /img/lesson_plans/uvc_0013-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Market with sellers seated before baskets, and many individuals in white clothing milling about." title="Jubilee Market, Kingston, Jamaica. c. 1890s, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. MonoVisions Black & White Photography Magazine. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img style="object-position: 50% 65%;" src="/img/lesson_plans/uvc_0013-900px.jpg" srcset="/img/lesson_plans/uvc_0013-900px.jpg 900w, /img/lesson_plans/uvc_0013-750px.jpg 750w, /img/lesson_plans/uvc_0013-600px.jpg 600w, /img/lesson_plans/uvc_0013-450px.jpg 450w, /img/lesson_plans/uvc_0013-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Market with sellers seated before baskets, and many individuals in white clothing milling about."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="lesson-plan-specs">
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Kira Braham <a class="mail" href="mailto:kbraham@lsmsa.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Kira Braham <a class="mail" href="mailto:kbraham@lsmsa.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Collaborating Peer Reviewers:</strong> Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
 						
-						<p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i> <span>Contact</span></a></p>
+						<p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
@@ -216,7 +216,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
