--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Decolonizing Health(care)</h2>
 				<div class="aspect-ratio-box">
-          	<img src="/img/lesson_plans/uvc_0009-0010-1650px.jpg" srcset="/img/lesson_plans/uvc_0009-0010-1650px.jpg 1650w, /img/lesson_plans/uvc_0009-0010-1500px.jpg 1500w, /img/lesson_plans/uvc_0009-0010-1350px.jpg 1350w, /img/lesson_plans/uvc_0009-0010-1200px.jpg 1200w, /img/lesson_plans/uvc_0009-0010-1050px.jpg 1050w, /img/lesson_plans/uvc_0009-0010-900px.jpg 900w, /img/lesson_plans/uvc_0009-0010-750px.jpg 750w, /img/lesson_plans/uvc_0009-0010-600px.jpg 600w, /img/lesson_plans/uvc_0009-0010-450px.jpg 450w, /img/lesson_plans/uvc_0009-0010-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Mary Seacole seated and looking down, while holding a bowl on her lap. Right: Black statue of Mary Seacole striding forward with round carved stone in background." title="(Left) Maull & Company. Mary Seacole. Wikimedia Commons, 1873, https://upload.wikimedia.org/wikipedia/commons/3/3b/Seacole_photo.jpg. Public domain. (Right) Jennings, Martin, and Owen Blacker. Mary Seacole. Wikimedia Commons, 2016, https://upload.wikimedia.org/wikipedia/commons/f/fe/Mary_Seacole_statue%2C_St_Thomas%27_Hospital%2C_front_view.jpg. Creative Commons CC0 1.0 Universal Public Domain Dedication (https://creativecommons.org/publicdomain/zero/1.0/deed.en)."/>
-						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+          	<img src="/img/lesson_plans/uvc_0009-0010-1650px.jpg" srcset="/img/lesson_plans/uvc_0009-0010-1650px.jpg 1650w, /img/lesson_plans/uvc_0009-0010-1500px.jpg 1500w, /img/lesson_plans/uvc_0009-0010-1350px.jpg 1350w, /img/lesson_plans/uvc_0009-0010-1200px.jpg 1200w, /img/lesson_plans/uvc_0009-0010-1050px.jpg 1050w, /img/lesson_plans/uvc_0009-0010-900px.jpg 900w, /img/lesson_plans/uvc_0009-0010-750px.jpg 750w, /img/lesson_plans/uvc_0009-0010-600px.jpg 600w, /img/lesson_plans/uvc_0009-0010-450px.jpg 450w, /img/lesson_plans/uvc_0009-0010-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Mary Seacole seated and looking down, while holding a bowl on her lap. Right: Black statue of Mary Seacole striding forward with round carved stone in background."/>
+						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="lesson-plan-specs">
 					<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Breanna Simpson <a class="mail" href="mailto:bsimpson@yorku.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Breanna Simpson <a class="mail" href="mailto:bsimpson@yorku.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Heidi Kaufman, Indu Ohri</p>
 						
-						<p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
@@ -238,7 +238,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
