--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -29,7 +29,7 @@
         <nav id="fallback-nav">
           <ul role="menubar" aria-label="Site sections">
             <li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-            <li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+            <li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
           </ul>
         </nav>
       </div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="lesson-plan">
         <h2 id="lesson-plan">Recentering Nursing in Wartime</h2>
         <div class="aspect-ratio-box">
-          <img style="object-position: 50% 15%;"  src="/img/lesson_plans/uvc_0011-0012-1050px.jpg" srcset="/img/lesson_plans/uvc_0011-0012-1050px.jpg 1050w, /img/lesson_plans/uvc_0011-0012-900px.jpg 900w, /img/lesson_plans/uvc_0011-0012-750px.jpg 750w, /img/lesson_plans/uvc_0011-0012-600px.jpg 600w, /img/lesson_plans/uvc_0011-0012-450px.jpg 450w, /img/lesson_plans/uvc_0011-0012-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Head and shoulders portrait of Mary Seacole facing to her right. Right: Three-quarters body portrait of Susie King Taylor, standing and facing to her right." title="(Left) Challen, Albert Charles. Mary Seacole. 1869, https://commons.m.wikimedia.org/wiki/File:Seacole_-_Challen.jpg. National Portrait Gallery. Public domain. (Right) Susie King Taylor. 1902, https://www.loc.gov/pictures/item/2003653538/. Library of Congress, General Collections. Public domain."/>
-          <a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+          <img style="object-position: 50% 15%;"  src="/img/lesson_plans/uvc_0011-0012-1050px.jpg" srcset="/img/lesson_plans/uvc_0011-0012-1050px.jpg 1050w, /img/lesson_plans/uvc_0011-0012-900px.jpg 900w, /img/lesson_plans/uvc_0011-0012-750px.jpg 750w, /img/lesson_plans/uvc_0011-0012-600px.jpg 600w, /img/lesson_plans/uvc_0011-0012-450px.jpg 450w, /img/lesson_plans/uvc_0011-0012-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Head and shoulders portrait of Mary Seacole facing to her right. Right: Three-quarters body portrait of Susie King Taylor, standing and facing to her right."/>
+          <a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
         <section class="specs" aria-labelledby="lesson-plan-specs">
           <h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
           <div class="specs-container">
-            <p><strong>Developer:</strong> Indu Ohri <a class="mail" href="mailto:io3jc@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+            <p><strong>Developer:</strong> Indu Ohri <a class="mail" href="mailto:io3jc@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
             <p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Heidi Kaufman, Breanna Simpson</p>
             
-            <p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+            <p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
             <p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
@@ -258,7 +258,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
