--- a/html/syllabi/black_(im)mobilities.html
+++ b/html/syllabi/black_(im)mobilities.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Black (Im)mobilities</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/syllabi/uvc_0035-1800px.jpg" srcset="/img/syllabi/uvc_0035-1800px.jpg 1800w, /img/syllabi/uvc_0035-1650px.jpg 1650w, /img/syllabi/uvc_0035-1500px.jpg 1500w, /img/syllabi/uvc_0035-1350px.jpg 1350w, /img/syllabi/uvc_0035-1200px.jpg 1200w, /img/syllabi/uvc_0035-1050px.jpg 1050w, /img/syllabi/uvc_0035-900px.jpg 900w, /img/syllabi/uvc_0035-750px.jpg 750w, /img/syllabi/uvc_0035-600px.jpg 600w, /img/syllabi/uvc_0035-450px.jpg 450w, /img/syllabi/uvc_0035-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="African American men and women, some with bundles on their heads, running across a wooded landscape." title="Kaufmann, Theodor. “On to Liberty.” 1867, https://www.metmuseum.org/art/collection/search/11287. The Met, 1982.443.3. Public domain. Gift of Erving and Joyce Wolf, in memory of Diane R. Wolf, 1982."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/syllabi/uvc_0035-1800px.jpg" srcset="/img/syllabi/uvc_0035-1800px.jpg 1800w, /img/syllabi/uvc_0035-1650px.jpg 1650w, /img/syllabi/uvc_0035-1500px.jpg 1500w, /img/syllabi/uvc_0035-1350px.jpg 1350w, /img/syllabi/uvc_0035-1200px.jpg 1200w, /img/syllabi/uvc_0035-1050px.jpg 1050w, /img/syllabi/uvc_0035-900px.jpg 900w, /img/syllabi/uvc_0035-750px.jpg 750w, /img/syllabi/uvc_0035-600px.jpg 600w, /img/syllabi/uvc_0035-450px.jpg 450w, /img/syllabi/uvc_0035-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="African American men and women, some with bundles on their heads, running across a wooded landscape."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="syllabus-specs">
 					<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Meg Dobbins <a class="mail" href="mailto:mdobbin2@emich.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Meg Dobbins <a class="mail" href="mailto:mdobbin2@emich.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Peer Reviewer:</strong> Patricia A. Matthew</p>
 						
-						<p><strong>Syllabus Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:rfong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Syllabus Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:rfong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Centering Black Studies</p>
 
@@ -75,7 +75,7 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Syllabus Overview</h3>
 
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/dobbins_black_(im)mobilities.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/dobbins_black_(im)mobilities.docx"  title="This link opens a Word document.">Word</a></p>
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/dobbins_black_(im)mobilities.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/dobbins_black_(im)mobilities.docx">Word</a></p>
 
 					<p>This upper-level, writing-intensive undergraduate seminar explores forms of Black mobility (human trafficking, diaspora, im/emigration, settlerism etc.) forced, encouraged, or made possible in the global economy of the eighteenth, nineteenth, and early twentieth centuries. Mobility, as the Oxford English Dictionary tells us, pertains to “the ability to move or to be moved,” the “capacity for movement or change of place,” and the ideas of “movableness, portability.” This course challenges and expands these definitions, centering on lived and imagined experiences of Black mobility and immobility. Some of our key questions include: How and why do Black people, ideas, labor, and stories become moveable, portable, and exchangeable? What individual and social patterns of movement – and countermovement – are created and sustained by the shifting spaces and demands of global capitalism? How do we read and write the story of Black mobility? What moves and is moved by Black people, Black stories, and Black histories?</p>
 
@@ -133,7 +133,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
