--- a/html/syllabi/canon_fodder.html
+++ b/html/syllabi/canon_fodder.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Canon Fodder: What Should We Read?</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/syllabi/uvc_0042-1800px.jpg" srcset="/img/syllabi/uvc_0042-1800px.jpg 1800w, /img/syllabi/uvc_0042-1650px.jpg 1650w, /img/syllabi/uvc_0042-1500px.jpg 1500w, /img/syllabi/uvc_0042-1350px.jpg 1350w, /img/syllabi/uvc_0042-1200px.jpg 1200w, /img/syllabi/uvc_0042-1050px.jpg 1050w, /img/syllabi/uvc_0042-900px.jpg 900w, /img/syllabi/uvc_0042-750px.jpg 750w, /img/syllabi/uvc_0042-600px.jpg 600w, /img/syllabi/uvc_0042-450px.jpg 450w, /img/syllabi/uvc_0042-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Series of tall library bookshelves receding into background." title="jarmoluk. [Untitled Photograph]. 15 Oct. 2014. Pixabay, https://pixabay.com/photos/library-books-bookcases-bookshelves-488690/. Pixabay License (https://pixabay.com/service/license/)."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/syllabi/uvc_0042-1800px.jpg" srcset="/img/syllabi/uvc_0042-1800px.jpg 1800w, /img/syllabi/uvc_0042-1650px.jpg 1650w, /img/syllabi/uvc_0042-1500px.jpg 1500w, /img/syllabi/uvc_0042-1350px.jpg 1350w, /img/syllabi/uvc_0042-1200px.jpg 1200w, /img/syllabi/uvc_0042-1050px.jpg 1050w, /img/syllabi/uvc_0042-900px.jpg 900w, /img/syllabi/uvc_0042-750px.jpg 750w, /img/syllabi/uvc_0042-600px.jpg 600w, /img/syllabi/uvc_0042-450px.jpg 450w, /img/syllabi/uvc_0042-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Series of tall library bookshelves receding into background."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="syllabus-specs">
 					<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong>  Jacob Romanow <a class="mail" href="mailto:jakeromanow@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong>  Jacob Romanow <a class="mail" href="mailto:jakeromanow@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Peer Reviewer:</strong> Rachel Sagner Buurma</p>
 						
-						<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Deconstructing the Literary Canon</p>
 
@@ -74,7 +74,7 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Syllabus Overview</h3>
 
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/romanow_canon_fodder.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/romanow_canon_fodder.docx"  title="This link opens a Word document.">Word</a></p>
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/romanow_canon_fodder.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/romanow_canon_fodder.docx">Word</a></p>
 
 				<p>In recent years, student activists have brought renewed focus to the question of the literature syllabus. Calls to diversify the English curriculum have met both success and resistance, in academic departments and in national media. Even since I first taught this course, “Cannon Fodder: What Should We Read?” in Summer 2019, many more of my students enter the classroom with an investment in the relationship between curriculum and antiracism. Questions of cultural representation, appropriation, and pedagogy once again loom large in American political life. The syllabus seems to matter more than ever.</p>
 
@@ -134,7 +134,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
