--- a/html/syllabi/capital-l_literature.html
+++ b/html/syllabi/capital-l_literature.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Capital L-Literature: Intro to Grad Studies</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/syllabi/uvc_0043-0044-1800px.jpg" srcset="/img/syllabi/uvc_0043-0044-1800px.jpg 1800w, /img/syllabi/uvc_0043-0044-1650px.jpg 1650w, /img/syllabi/uvc_0043-0044-1500px.jpg 1500w, /img/syllabi/uvc_0043-0044-1350px.jpg 1350w, /img/syllabi/uvc_0043-0044-1200px.jpg 1200w, /img/syllabi/uvc_0043-0044-1050px.jpg 1050w, /img/syllabi/uvc_0043-0044-900px.jpg 900w, /img/syllabi/uvc_0043-0044-750px.jpg 750w, /img/syllabi/uvc_0043-0044-600px.jpg 600w, /img/syllabi/uvc_0043-0044-450px.jpg 450w, /img/syllabi/uvc_0043-0044-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Man with long beard and hair sitting cross-legged over manuscript book, writing with both hands. Right: Man with long beard and hair, sitting with arms extended, surrounded by various apparitions." title="(Left) Blake, William. The First Book of Urizen. 1794 (composed); c.1818 (printed), http://www.blakearchive.org/copy/urizen.g?descId=urizen.g.illbk.01. The William Blake Archive, The Book of Urizen, Copy G, Object 1 (Bentley 1, Erdman 1, Keynes 1). Fair use. (Right) Blake, William. Milton in His Old Age. c.1816-20 (composed), http://www.blakearchive.org/copy/but543.1?descId=but543.1.wc.12. The William Blake Archive, Illustrations to Milton’s “L’Allegro” and “Il Penseroso,” Copy 1, Object 12 (Butlin 543.12). Fair use."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/syllabi/uvc_0043-0044-1800px.jpg" srcset="/img/syllabi/uvc_0043-0044-1800px.jpg 1800w, /img/syllabi/uvc_0043-0044-1650px.jpg 1650w, /img/syllabi/uvc_0043-0044-1500px.jpg 1500w, /img/syllabi/uvc_0043-0044-1350px.jpg 1350w, /img/syllabi/uvc_0043-0044-1200px.jpg 1200w, /img/syllabi/uvc_0043-0044-1050px.jpg 1050w, /img/syllabi/uvc_0043-0044-900px.jpg 900w, /img/syllabi/uvc_0043-0044-750px.jpg 750w, /img/syllabi/uvc_0043-0044-600px.jpg 600w, /img/syllabi/uvc_0043-0044-450px.jpg 450w, /img/syllabi/uvc_0043-0044-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Man with long beard and hair sitting cross-legged over manuscript book, writing with both hands. Right: Man with long beard and hair, sitting with arms extended, surrounded by various apparitions."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="syllabus-specs">
 					<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Lindsey N. Chappell <a class="mail" href="mailto:lchappell@georgiasouthern.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Lindsey N. Chappell <a class="mail" href="mailto:lchappell@georgiasouthern.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Peer Reviewer:</strong> Rachel Sagner Buurma</p>
 						
-						<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Deconstructing the Literary Canon</p>
 
@@ -74,7 +74,7 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Syllabus Overview</h3>
 
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/chappell_capital-l_literature.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/chappell_capital-l_literature.docx"  title="This link opens a Word document.">Word</a></p>
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/chappell_capital-l_literature.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/chappell_capital-l_literature.docx">Word</a></p>
 
 					<p>This syllabus represents my ongoing effort to reconsider the required “Introduction to Graduate Studies” course at my public M.A.-granting institution so that it serves our diverse student body, some of whom will go on to Ph.D. programs but many of whom will pursue teaching, administration, non-profit work, and industry positions. While mine is not thematically a “Victorian classroom,” my training in nineteenth-century British literature nevertheless shapes the syllabus I’m contributing to this cluster on “deconstructing the literary canon” by foregrounding the creation of literary studies as a historical political endeavor with ongoing relevance within and beyond academia.</p>
 
@@ -156,7 +156,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
