--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Reintroducing the Victorians</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/syllabi/uvc_0026-1500px.jpg" srcset="/img/syllabi/uvc_0026-1500px.jpg 1500w, /img/syllabi/uvc_0026-1350px.jpg 1350w, /img/syllabi/uvc_0026-1200px.jpg 1200w, /img/syllabi/uvc_0026-1050px.jpg 1050w, /img/syllabi/uvc_0026-900px.jpg 900w, /img/syllabi/uvc_0026-750px.jpg 750w, /img/syllabi/uvc_0026-600px.jpg 600w, /img/syllabi/uvc_0026-450px.jpg 450w, /img/syllabi/uvc_0026-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Interior scene with a large group of women seated around a table, many looking at documents." title="Sims, G. R., editor. “In the Ayah’s Home (Hackney).” Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12., https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/syllabi/uvc_0026-1500px.jpg" srcset="/img/syllabi/uvc_0026-1500px.jpg 1500w, /img/syllabi/uvc_0026-1350px.jpg 1350w, /img/syllabi/uvc_0026-1200px.jpg 1200w, /img/syllabi/uvc_0026-1050px.jpg 1050w, /img/syllabi/uvc_0026-900px.jpg 900w, /img/syllabi/uvc_0026-750px.jpg 750w, /img/syllabi/uvc_0026-600px.jpg 600w, /img/syllabi/uvc_0026-450px.jpg 450w, /img/syllabi/uvc_0026-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Interior scene with a large group of women seated around a table, many looking at documents."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="syllabus-specs">
 					<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Priyanka Anne Jacob <a class="mail" href="mailto:pjacob@luc.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Priyanka Anne Jacob <a class="mail" href="mailto:pjacob@luc.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Peer Reviewer:</strong> Elaine Freedgood</p>
 						
-						<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Recontextualizing the Victorians</p>
 
@@ -74,7 +74,7 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Syllabus Overview</h3>
 
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/jacob_reintroducing_victorians.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/jacob_reintroducing_victorians.docx"  title="This link opens a Word document.">Word</a></p>
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/jacob_reintroducing_victorians.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/jacob_reintroducing_victorians.docx">Word</a></p>
 
 					<p>In this course, we began with questions: “What is ‘Victorian’?” “What is ‘British’?” Students responded with original drawings, word clouds, and descriptions in which petticoats and top hats featured prominently. Their impressions of marriage plots and drawing-room dramas were consistent with the vision of Britishness one might associate with PBS's <em>Masterpiece</em> – or its source material, canonical nineteenth-century literature. Our conversation that first day illustrated Antoinette Burton’s argument that Britishness remains a “remarkably resilient cultural commodity” and that Britain continues to be depicted as “an essentially white island of history” (82–3).</p>
 
@@ -140,7 +140,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
