--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Unsettling Victorian Literature</h2>
 				<div class="aspect-ratio-box">
-					<img style="object-position: 50% 0%;" src="/img/syllabi/uvc_0029-1500px.jpg" srcset="/img/syllabi/uvc_0029-1500px.jpg 1500w, /img/syllabi/uvc_0029-1350px.jpg 1350w, /img/syllabi/uvc_0029-1200px.jpg 1200w, /img/syllabi/uvc_0029-1050px.jpg 1050w, /img/syllabi/uvc_0029-900px.jpg 900w, /img/syllabi/uvc_0029-750px.jpg 750w, /img/syllabi/uvc_0029-600px.jpg 600w, /img/syllabi/uvc_0029-450px.jpg 450w, /img/syllabi/uvc_0029-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Small body of water with evergreen trees, green hills, and snow-capped mountains in distance." title="The Lions and Brockton Point, Stanley Park. n.d., https://digital.lib.sfu.ca/pfp-22097/msc130-1106701. Simon Frazer University Digitized Collections, MSC130-11067."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img style="object-position: 50% 0%;" src="/img/syllabi/uvc_0029-1500px.jpg" srcset="/img/syllabi/uvc_0029-1500px.jpg 1500w, /img/syllabi/uvc_0029-1350px.jpg 1350w, /img/syllabi/uvc_0029-1200px.jpg 1200w, /img/syllabi/uvc_0029-1050px.jpg 1050w, /img/syllabi/uvc_0029-900px.jpg 900w, /img/syllabi/uvc_0029-750px.jpg 750w, /img/syllabi/uvc_0029-600px.jpg 600w, /img/syllabi/uvc_0029-450px.jpg 450w, /img/syllabi/uvc_0029-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Small body of water with evergreen trees, green hills, and snow-capped mountains in distance."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 					</div>
 
 					<section class="specs" aria-labelledby="syllabus-specs">
 						<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Developer:</strong> Margaret Linley <a class="mail" href="mailto:mlinley@sfu.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+							<p><strong>Developer:</strong> Margaret Linley <a class="mail" href="mailto:mlinley@sfu.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 							<p><strong>Peer Reviewer:</strong> Elaine Freedgood</p>
 							
-							<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+							<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 							<p><strong>Cluster Title:</strong> Recontextualizing the Victorians</p>
 
@@ -75,7 +75,7 @@
 					<section aria-labelledby="overview">
 						<h3 id="overview">Syllabus Overview</h3>
 
-						<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/linley_unsettling_victorian.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/linley_unsettling_victorian.docx"  title="This link opens a Word document.">Word</a></p>
+						<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/linley_unsettling_victorian.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/linley_unsettling_victorian.docx">Word</a></p>
 
 						<p>“Unsettling Victorian Literature” aims to help students identify basic assumptions about what Victorian literature is and why we study it today. While our initial discussion focuses on “what” is Victorian, we quickly move to “where” and “when” is Victorian. Is Victorian somewhere in the past and far away in England, or is it so close to us that we can barely see it? Through this discussion, Victorian emerges not as a homogenous and fixed category but as many things simultaneously in relation, an open question and a tool we might use to locate and identify ourselves as historical and responsible agents, always relative, diverse, contested, and in flux. But is Victorian still necessary or relevant?</p>
 
@@ -141,7 +141,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
