--- a/html/syllabi/victorian_women_world.html
+++ b/html/syllabi/victorian_women_world.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Victorian Women of the World</h2>
 				<div class="aspect-ratio-box">
-					<img style="object-position: 50% 0%;" src="/img/syllabi/uvc_0032-0033-1350px.jpg" srcset="/img/syllabi/uvc_0032-0033-1350px.jpg 1350w, /img/syllabi/uvc_0032-0033-1200px.jpg 1200w, /img/syllabi/uvc_0032-0033-1050px.jpg 1050w, /img/syllabi/uvc_0032-0033-900px.jpg 900w, /img/syllabi/uvc_0032-0033-750px.jpg 750w, /img/syllabi/uvc_0032-0033-600px.jpg 600w, /img/syllabi/uvc_0032-0033-450px.jpg 450w, /img/syllabi/uvc_0032-0033-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Hiawatha and Minnehaha standing in a close, but open pose, holding hands and looking at one another. Right: Edmonia Lewis, seated, with wrap over her shoulders, in three-quarters profile facing to her right." title="(Left) Lewis, Edmonia. “Hiawatha’s Marriage.” 1871, https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG. Wikimedia Commons. Public domain. (Right) Rocher, Henry. Edmonia Lewis. c 1870, https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg. Wikimedia Commons. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img style="object-position: 50% 0%;" src="/img/syllabi/uvc_0032-0033-1350px.jpg" srcset="/img/syllabi/uvc_0032-0033-1350px.jpg 1350w, /img/syllabi/uvc_0032-0033-1200px.jpg 1200w, /img/syllabi/uvc_0032-0033-1050px.jpg 1050w, /img/syllabi/uvc_0032-0033-900px.jpg 900w, /img/syllabi/uvc_0032-0033-750px.jpg 750w, /img/syllabi/uvc_0032-0033-600px.jpg 600w, /img/syllabi/uvc_0032-0033-450px.jpg 450w, /img/syllabi/uvc_0032-0033-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Hiawatha and Minnehaha standing in a close, but open pose, holding hands and looking at one another. Right: Edmonia Lewis, seated, with wrap over her shoulders, in three-quarters profile facing to her right."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="syllabus-specs">
 					<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Jesse Cordes Selbin <a class="mail" href="mailto:jcordess@gettysburg.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Jesse Cordes Selbin <a class="mail" href="mailto:jcordess@gettysburg.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Peer Reviewer:</strong> Ronjaunee Chatterjee</p>
 						
-						<p><strong>Syllabus Cluster Developer:</strong> Pearl Chaozon Bauer <a class="mail" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Syllabus Cluster Developer:</strong> Pearl Chaozon Bauer <a class="mail" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Gender and Empire</p>
 
@@ -74,7 +74,7 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Syllabus Overview</h3>
 
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/cordes_selbin_victorian_women_world.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/cordes_selbin_victorian_women_world.docx"  title="This link opens a Word document.">Word</a></p>
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/cordes_selbin_victorian_women_world.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/cordes_selbin_victorian_women_world.docx">Word</a></p>
 
 					<p>This course introduces students to the interconnected, if often uneven, cultural encounters that arose across what Sukanya Banerjee has identified as the “transimperial” world. To focus our long, wide century of readings, we explore the emergence of first-wave feminism as it developed throughout this world. As Jill Richards has shown, attempts to convene an international feminist movement boomed in the late nineteenth and early twentieth centuries. Though women from around the globe aspired and worked to coalesce around common goals and collective labor, unification efforts remained tenuous, contingent, and fractured by both personal prejudices and structural inequities. This course surveys these intersections and tensions, opening with Age of Revolution human rights discourse and the variously marginalized authors who sought to extend the reach of its ideals of liberty and equality – work that has continued ever since. Throughout the semester, we analyze how English literature was shaped by global authors who advanced their voices in the public sphere, gave creative expression to visions of a gender-based commons, and pressed the question of what womanhood might mean, entail, or demand.</p>
 
@@ -140,7 +140,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
