--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -29,7 +29,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -39,19 +39,19 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Nineteenth-Century Women Write the Empire</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/syllabi/uvc_0030-0031-1800px.jpg" srcset="/img/syllabi/uvc_0030-0031-1800px.jpg 1800w, /img/syllabi/uvc_0030-0031-1650px.jpg 1650w, /img/syllabi/uvc_0030-0031-1500px.jpg 1500w, /img/syllabi/uvc_0030-0031-1350px.jpg 1350w, /img/syllabi/uvc_0030-0031-1200px.jpg 1200w, /img/syllabi/uvc_0030-0031-1050px.jpg 1050w, /img/syllabi/uvc_0030-0031-900px.jpg 900w, /img/syllabi/uvc_0030-0031-750px.jpg 750w, /img/syllabi/uvc_0030-0031-600px.jpg 600w, /img/syllabi/uvc_0030-0031-450px.jpg 450w, /img/syllabi/uvc_0030-0031-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Toru Dutt standing in three-quarter profile to her right with hands on chair, but facing the viewer. Right: Head and shoulders portrait of Pandita Ramabai Sarasvati." title="(Left) “Toru Dutt.” Life and Letters of Toru Dutt, by Toru Dutt and Harihar Das, Humphrey Milford; Oxford University Press, 1921, frontispiece, https://archive.org/details/lifelettersoftor00duttuoft. Public domain. (Right) Gutekunst, Frederick. “Pandita Ramabai Sarasvati.” The High-Caste Hindu Woman, by Pandita Ramabai Sarasvati, Press of The Jas B. Rodgers Printing Co., 1887, p. frontispiece, https://archive.org/details/highcastehinduwo00ramaiala/page/n5/mode/2up. Public domain."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
+					<img src="/img/syllabi/uvc_0030-0031-1800px.jpg" srcset="/img/syllabi/uvc_0030-0031-1800px.jpg 1800w, /img/syllabi/uvc_0030-0031-1650px.jpg 1650w, /img/syllabi/uvc_0030-0031-1500px.jpg 1500w, /img/syllabi/uvc_0030-0031-1350px.jpg 1350w, /img/syllabi/uvc_0030-0031-1200px.jpg 1200w, /img/syllabi/uvc_0030-0031-1050px.jpg 1050w, /img/syllabi/uvc_0030-0031-900px.jpg 900w, /img/syllabi/uvc_0030-0031-750px.jpg 750w, /img/syllabi/uvc_0030-0031-600px.jpg 600w, /img/syllabi/uvc_0030-0031-450px.jpg 450w, /img/syllabi/uvc_0030-0031-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Toru Dutt standing in three-quarter profile to her right with hands on chair, but facing the viewer. Right: Head and shoulders portrait of Pandita Ramabai Sarasvati."/>
+					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="specs" aria-labelledby="syllabus-specs">
 					<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 					<div class="specs-container">
-						<p><strong>Developer:</strong> Amy Kahrmann Huseby <a class="mail" href="mailto:ahuseby@fiu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Developer:</strong> Amy Kahrmann Huseby <a class="mail" href="mailto:ahuseby@fiu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Peer Reviewer:</strong> Ronjaunee Chatterjee</p>
 						
-						<p><strong>Syllabus Cluster Developer:</strong> Pearl Chaozon Bauer <a class="mail" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+						<p><strong>Syllabus Cluster Developer:</strong> Pearl Chaozon Bauer <a class="mail" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Cluster Title:</strong> Gender and Empire</p>
 
@@ -74,7 +74,7 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Syllabus Overview</h3>
 
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/huseby_women_write_empire.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/huseby_women_write_empire.docx"  title="This link opens a Word document.">Word</a></p>
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/huseby_women_write_empire.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/huseby_women_write_empire.docx">Word</a></p>
 
 					<p>“Nineteenth-Century Women Write the Empire” emphasizes writing from Victorian women around the world. Their writing engages with complex ideas of empire through diverse genres of writing that render identity transparent: life writing (e.g., memoir and biography), the lyric, and letters and essays. Each genre enabled women writers to contend with empire and to experiment in literature as a way of exploring identity. Our exploration moves outward in increasingly widening gyres, first from the Caribbean with the life writing of Mary Prince and Mary Seacole, then to the Transatlantic, and eventually following our authors to their experiences in the Crimean War, Australia, and the Indian Subcontinent. Some questions we ask include: How might focalizing our exploration of this ostensibly homogeneous thing called “England” through the writing of women of color work not only to dispel the silence of their experiences, but to foreground the granularity of empire? Throughout, we tease from their histories and creative work compounding acts of assimilation in order to discover the multitudinous perspectives women writers had on empire, and how their writing endeavored to challenge, question, and resist the British empire, as well as at times reinforcing its effects.</p>
 
@@ -142,7 +142,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
