--- a/html/zoomcasts/kim-cobblah.html
+++ b/html/zoomcasts/kim-cobblah.html
@@ -30,7 +30,7 @@
 				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
+						<li role="none"><button aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 					</ul>
 				</nav>
 			</div>
@@ -56,7 +56,7 @@
 							<p><strong>Length:</strong> 31:59</p><!-- Change -->
 							<p><strong>Zoomcast Date:</strong> September 29, 2021</p>
 							<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
-							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-09-29-Kim-Cobblah-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-09-29-Kim-Cobblah-transcript.docx"  title="This link opens a Word document.">Word</a></p>
+							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-09-29-Kim-Cobblah-transcript.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-09-29-Kim-Cobblah-transcript.docx">Word</a></p>
 						</div>
 					</section>
 
@@ -96,7 +96,7 @@
 			<div data-include="footer"></div>
 
 			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
-			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
+			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
