--- a/0_dev/removed-files/call-for-syllabi.html
+++ b/0_dev/removed-files/call-for-syllabi.html
@@ -33,7 +33,7 @@
 							text-decoration: underline;
 							text-align: center;
 							color: #fff;
-							background-color: rgba(0, 0, 0, 0.65);
+							background-color: #2A3232;
 							border: 2px solid transparent;
 							-webkit-border-radius: 5px;
 							-moz-border-radius: 5px;
