--- a/0_dev/Annotated-HTML-Code.html
+++ b/0_dev/Annotated-HTML-Code.html
@@ -18,7 +18,7 @@
 <meta name="robots" content="index, follow"/>
 
 <!-- Sets the theme color for the webpage, which is used by some browsers and mobile devices -->
-<meta name="theme-color" content="#395375"/>
+<meta name="theme-color" content="#1F5B89"/>
 
 <!-- Link to various icons used by the page, including for mobile devices and browser tabs -->
 <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
