--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Explores Victorian literature through the lenses of race, trans-Atlantic slavery, and the British empire by drawing on Black and African American studies."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
-		<meta name="theme-color" content="#395375"/>
+		<meta name="theme-color" content="#1F5B89"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
