--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Introduces the founding developers, acknowledges the work of contributors, provides insight into the project's critical thinking, and gathers all bibliographic materials."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
-		<meta name="theme-color" content="#395375"/>
+		<meta name="theme-color" content="#1F5B89"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
