--- a/html/lesson_plans/east_asia_visualizing_korea.html
+++ b/html/lesson_plans/east_asia_visualizing_korea.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Highlights visual materials such as maps, photography, and travel narratives to portray Korea’s representation in the Victorian imagination."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
-		<meta name="theme-color" content="#395375"/>
+		<meta name="theme-color" content="#1F5B89"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
