--- a/html/syllabi/muslim_other.html
+++ b/html/syllabi/muslim_other.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Shifts the focus from the imperial center in Victorian literature to the Muslim “other” by amplifying nineteenth-century voices from the Middle East and Asia."/><!-- Change; 160 char max -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
-		<meta name="theme-color" content="#395375"/>
+		<meta name="theme-color" content="#1F5B89"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
