--- a/0_dev/removed-files/call-for-syllabi.html
+++ b/0_dev/removed-files/call-for-syllabi.html
@@ -44,11 +44,11 @@
 						}
 						.image-caption a:hover,
 						.image-caption a:focus{
-							background-color: #154060;
+							background-color: #20518D;
 							margin: 0;
 						}
 						.image-caption a:focus{
-							border-color: #154060;
+							border-color: #20518D;
 							-webkit-box-shadow: inset 0px 0px 0px 2px #fff;
 							-moz-box-shadow: inset 0px 0px 0px 2px #fff;
 							box-shadow: inset 0px 0px 0px 2px #fff;
