--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Jason Rudy and Ryan D. Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
-		<meta name="theme-color" content="#1F5B89"/>
+		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
