--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Focuses on Mary Seacole’s positioning in the history of medicine and its relation to the study, teaching, and practice of the “care” professions, esp. nursing."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
-		<meta name="theme-color" content="#1F5B89"/>
+		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
