--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
 					<h2 id="main-sections">Main Sections</h2>
 
 					<ul>
-						<li id="site-section-1"><a href="/html/zoomcasts.html"><span><i class="fa fa-play-circle fa-fw"></i> Zoomcasts</span></a></li>
-						<li id="site-section-2"><a href="/html/lesson_plans.html"><span><i class="fa fa-book fa-fw"></i> Lesson Plans</span></a></li>
-						<li id="site-section-3"><a href="/html/syllabi.html"><span><i class="fa fa-pen fa-fw"></i> Syllabi</span></a></li>
-						<li id="site-section-4"><a href="/html/assessments.html"><span><i class="fa fa-info-circle fa-fw"></i> Assessments</span></a></li>
-						<!-- <li id="site-section-5"><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw"></i> About</span></a></li> -->
+						<li><a href="/html/zoomcasts.html"><span><i class="fa fa-play-circle fa-fw"></i> Zoomcasts</span></a></li>
+						<li><a href="/html/lesson_plans.html"><span><i class="fa fa-book fa-fw"></i> Lesson Plans</span></a></li>
+						<li><a href="/html/syllabi.html"><span><i class="fa fa-pen fa-fw"></i> Syllabi</span></a></li>
+						<!-- <li><a href="/html/assessments.html"><span><i class="fa fa-info-circle fa-fw"></i> Assessments</span></a></li> -->
+						<li><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw"></i> About</span></a></li>
 					</ul>
 				</section>
 
