--- a/html/assessments/das_british_literary.html
+++ b/html/assessments/das_british_literary.html
@@ -137,7 +137,7 @@
 
 					<p>(Left) Anonymous. <a aria-label=""External Link"" href="https://commons.wikimedia.org/wiki/File:Amy_Levy_1.jpg">Amy Levy</a>. [nineteenth century]. <em>Wikimedia Commons</em>. Public domain.</p>
 
-					<p>(Right) PDH. <a aria-label=""External Link"" href="https://commons.wikimedia.org/wiki/File:Grant_morrison2.jpg">Grant Morrison</a>. 22 July 2006. <em>Wikimedia Commons</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/2.0/deed.en">Creative Commons Attribution 2.0 Generic</a> (CC BY 2.0)</p>
+					<p>(Right) PDH. <a aria-label=""External Link"" href="https://commons.wikimedia.org/wiki/File:Grant_morrison2.jpg">Grant Morrison</a>. 22 July 2006. <em>Wikimedia Commons</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/2.0/deed.en">Creative Commons Attribution 2.0 Generic</a> (CC BY 2.0).</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
