--- a/sitemap.html
+++ b/sitemap.html
@@ -139,6 +139,8 @@
 						<li role="none"><a href="/html/about.html"><span id="about">About</span></a>
 							<ol>
 								<li><a href="/html/about/founding_developers.html">Founding Developers</a></li>
+								<li><a href="/html/about/associate_editors.html">Associate Editors</a></li>
+								<li><a href="/html/about/assistant_editors.html">Assistant Editors</a></li>
 								<li><a href="/html/about/project_contributors.html">Project Contributors</a></li>
 								<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
 								<li><a href="/html/about/bibliography.html">Bibliography</a></li>
