--- a/html/assessments/recovering_reevaluating.html
+++ b/html/assessments/recovering_reevaluating.html
@@ -55,7 +55,7 @@
 						
 						<p><strong>Webpage Developer(s):</strong> Ava Bindas; Kristen Layne Figgins; Adrian S. Wisnicki</p>
 
-						<p><strong>Associated Assessment(s):</strong> Amanda Shubert, <a href="/html/assessments/(post-)colonial_biography.html">(Post-)Colonial Biography</a></p>
+						<p><strong>Associated Assessment(s):</strong> Amanda Shubert, “<a href="/html/assessments/(post-)colonial_biography.html">(Post-)Colonial Biography</a>”</p>
 
 						<p><strong>Cluster Theme:</strong> Widening the Empire</p>
 
