--- a/py/assessment-template-1.html
+++ b/py/assessment-template-1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>{title} | Undisciplining the Victorian Classroom</title><!-- Change -->
-		<meta name="description" content="{description}"/><!-- Change; 160 char max -->
+		<meta name="description" content="{description}"/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
@@ -57,7 +57,7 @@
 						
 						<p><strong>Webpage Developer(s):</strong> {webpage-dev}</p><!-- Change -->
 
-						<p><strong>Associated Assessment(s):</strong> {associated-assessment-author}, <a href="/html/assessments/{associated-assessment-file-name}.html">{associated-assessment}</a></p><!-- Change -->
+						<p><strong>Associated Assessment(s):</strong> {associated-assessment-author}, “<a href="/html/assessments/{associated-assessment-file-name}.html">{associated-assessment}</a>”</p><!-- Change -->
 
 						<p><strong>Cluster Title:</strong> {cluster-title}</p><!-- Change -->
 
