--- a/html/assessments/recovering_reevaluating.html
+++ b/html/assessments/recovering_reevaluating.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>Recovering and Reevaluating Anglophone Writers | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="The British Literary Profile Project demystifies scholarly research for BIPOC students and adds to the knowledge-base of the classroom with reevaluations of Anglophone writers."/>
+		<meta name="description" content="Assessment that demystifies scholarly research for BIPOC students and adds to the knowledge-base of the classroom with reevaluations of Anglophone writers."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
