--- a/html/assessments/(post-)colonial_biography.html
+++ b/html/assessments/(post-)colonial_biography.html
@@ -53,9 +53,9 @@
 
 						<p><strong>Assessment Guide:</strong> Pearl Chaozon Bauer <a class="mail" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
-						<p><strong>Webpage Developer(s):</strong> Adrian S. Wisnicki</p>
+						<p><strong>Webpage Developer:</strong> Adrian S. Wisnicki</p>
 
-						<p><strong>Associated Assessment(s):</strong> Riya Das, “<a href="/html/assessments/recovering_reevaluating.html">Recovering and Reevaluating Anglophone Writers</a>”</p>
+						<p><strong>Associated Assessment:</strong> Riya Das, “<a href="/html/assessments/recovering_reevaluating.html">Recovering and Reevaluating Anglophone Writers</a>”</p>
 
 						<p><strong>Cluster Title:</strong> Widening the Empire</p>
 
@@ -68,7 +68,6 @@
 					<ol class="menu">
 						<li><a href="#overview">Assessment Overview</a></li>
 						<li><a href="#works-cited">Works Cited</a></li>
-						<li><a href="#series">Widening the Empire Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Header Image Caption</a></li>
 						<li><a href="#citation">Page/Assessment Citation (MLA)</a></li>
