--- a/html/assessments/recovering_reevaluating.html
+++ b/html/assessments/recovering_reevaluating.html
@@ -53,9 +53,9 @@
 
 						<p><strong>Assessment Guide:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
-						<p><strong>Webpage Developer(s):</strong> Ava Bindas; Kristen Layne Figgins; Adrian S. Wisnicki</p>
+						<p><strong>Webpage Developers:</strong> Ava Bindas; Kristen Layne Figgins; Adrian S. Wisnicki</p>
 
-						<p><strong>Associated Assessment(s):</strong> Amanda Shubert, “<a href="/html/assessments/(post-)colonial_biography.html">(Post-)Colonial Biography</a>”</p>
+						<p><strong>Associated Assessment:</strong> Amanda Shubert, “<a href="/html/assessments/(post-)colonial_biography.html">(Post-)Colonial Biography</a>”</p>
 
 						<p><strong>Cluster Theme:</strong> Widening the Empire</p>
 
