u assess/syl template

--- a/py/syllabus-template-1.html
+++ b/py/syllabus-template-1.html
@@ -68,7 +68,7 @@
 					<ol class="menu">
 						<li><a href="#overview">Syllabus Overview</a></li>
 						<li><a href="#works-cited">Works Cited</a></li>
-						<li><a href="#series">{cluster-title} Series</a></li>
+						<li><a href="#series">{cluster-title} Series</a></li><!-- Change -->
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
