u index for assess

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fork-awesome/1.2.0/css/fork-awesome.min.css" integrity="sha512-aupidr80M36SeyviA/hZ2uEPnvt2dTJfyjm9y6z1MgaV13TgzmDiFdsH3cvSNG27mRIj7gJ2gNeg1HeySJyE3Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0010"/>
-		<link rel="stylesheet" type="text/css" href="/css/index.css?=newVers_0004"/>
+		<link rel="stylesheet" type="text/css" href="/css/index.css?=newVers_0005"/>
 		<link rel="stylesheet" type="text/css" href="/css/carousel.css?=newVers_0004"/>
 	</head>
 
@@ -172,7 +172,7 @@
 						<li><a href="/html/zoomcasts.html"><span><i class="fa fa-play-circle fa-fw"></i> Zoomcasts</span></a></li>
 						<li><a href="/html/lesson_plans.html"><span><i class="fa fa-book fa-fw"></i> Lesson Plans</span></a></li>
 						<li><a href="/html/syllabi.html"><span><i class="fa fa-pen fa-fw"></i> Syllabi</span></a></li>
-						<!-- <li><a href="/html/assessments.html"><span><i class="fa fa-info-circle fa-fw"></i> Assessments</span></a></li> -->
+						<li><a href="/html/assessments.html"><span><i class="fa fa-info-circle fa-fw"></i> Assessments</span></a></li>
 						<li><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw"></i> About</span></a></li>
 					</ul>
 				</section>
