--- a/py/assessment-template-1.html
+++ b/py/assessment-template-1.html
@@ -55,9 +55,9 @@
 
 						<p><strong>Assessment Guide:</strong> {assessment-guide} <a class="mail" href="mailto:{assessment-guide-email}?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 						
-						<p><strong>Webpage Developer(s):</strong> {webpage-dev}</p><!-- Change -->
+						<p><strong>Webpage Developer:</strong> {webpage-dev}</p><!-- Change -->
 
-						<p><strong>Associated Assessment(s):</strong> {associated-assessment-author}, “<a href="/html/assessments/{associated-assessment-file-name}.html">{associated-assessment}</a>”</p><!-- Change -->
+						<p><strong>Associated Assessment:</strong> {associated-assessment-author}, “<a href="/html/assessments/{associated-assessment-file-name}.html">{associated-assessment}</a>”</p><!-- Change -->
 
 						<p><strong>Cluster Title:</strong> {cluster-title}</p><!-- Change -->
 
