--- a/html/assessments.html
+++ b/html/assessments.html
@@ -42,7 +42,7 @@
 
 				<section aria-labelledby="overview">
 					<h3 id="overview">Overview</h3>
-					<p>These peer-reviewed assessments...</p>
+					<p>These assessments use innovative pedagogical approaches that are antiracist, antiableist and anticolonialist in content and/or form. While they feature a Victorian-era component, they can be adapted for a variety of teaching contexts. We offer these assessments in an effort to help us reimagine a Victorian Studies that empowers students through different forms of critical and creative engagement.</p>
 				</section>
 
 				<section aria-labelledby="widening-empire-1">
