--- a/py/template-zoomcast-1.html
+++ b/py/template-zoomcast-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>{title} | Undisciplining the Victorian Classroom</title><!-- Change -->
+		<title>Zoomcast with {guest} | Undisciplining the Victorian Classroom</title><!-- Change -->
 		<meta name="description" content="{description}"/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -41,7 +41,7 @@
 					<h2 id="zoomcast">Zoomcast with {guest}</h2><!-- Change -->
 
 					<div class="wrapper" aria-labelledby="">
-						<div id="" class="youtube" tabindex="0" data-embed="{youtube-code}" data-title="{guest}" data-id="{guest-surname-lower-case}" data-alt="{alt}"><!-- Change -->
+						<div id="" class="youtube" tabindex="0" data-embed="{youtube-code}" data-title="{guest}" data-id="{guest-surname-lower-case}" data-alt="Head and shoulders image of {guest}"><!-- Change -->
 							<nav class="skipcontrols" aria-labelledby="skip-controls">
 								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
 							</nav>
@@ -87,7 +87,7 @@
 					<section aria-labelledby="series">
 						<h3 id="series">{zoomcast-series} Series</h3>
 						
-						{zoomcast-series-overview}
+						{zoomcast-series-description}<!-- Change -->
 					</section>
 
 					<section aria-labelledby="biography">
