--- a/html/assessments/(post-)colonial_biography.html
+++ b/html/assessments/(post-)colonial_biography.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>(Post-)Colonial Biography | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Assessment through which students discover their link to the history of European and U.S. colonialism by researching a person, place, or object close to them."/>
+		<meta name="description" content="Students discover their connection to and participation in the history of European and U.S. colonialism by researching a person, place, or object close to them."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
